Fix list-group overflow & height

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -133,7 +133,7 @@ div.dropdown-menu-navbar1.show {
 .fa-window-minimize {
   font-size: 12px;
 }
-.card-inmobiliarias {
+.list-group {
   height: 205px;
   overflow: auto;
 }
